--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,30 @@ repositories {
 }
 
 dependencies {
+    implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\joozdlogCommon\\build\\libs\\joozdlogCommon.jar")
+    implementation files("C:\\Users\\joozd\\IdeaProjects\\libs\\joozdserializing-jvm-0.1.1.jar")
+    implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\JoozdlogImport\\build\\libs\\JoozdlogImport.jar")
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
+    // Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+
+    // HTTP server)
     implementation("io.javalin:javalin:5.6.1")
+
+    //logging
     implementation("org.slf4j:slf4j-simple:2.0.7")
+
+    // JSON
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.0")
+
+    //H2 database
+    implementation 'com.h2database:h2:2.2.220'
+
+    implementation("org.jetbrains.exposed:exposed-core:$EXPOSED_VERSION")
+    implementation("org.jetbrains.exposed:exposed-dao:$EXPOSED_VERSION")
+    implementation("org.jetbrains.exposed:exposed-jdbc:$EXPOSED_VERSION")
 }
 
 test {
@@ -22,14 +42,14 @@ test {
 }
 
 kotlin {
-    jvmToolchain(11)
+    jvmToolchain(17)
 }
 
 application {
     mainClassName = 'MainKt'
 }
 
-def minJavaVersion = 11
+def minJavaVersion = 17
 def currentJavaVersion = JavaVersion.current()
 if (currentJavaVersion.isJava11Compatible()) {
     println "Using Java $currentJavaVersion"
@@ -38,7 +58,7 @@ if (currentJavaVersion.isJava11Compatible()) {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
