--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ dependencies {
     // Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 
-    // HTTP server)
+    // HTTP server
     implementation("io.javalin:javalin:5.6.1")
+
+    //Javamail
+    implementation("com.sun.mail:javax.mail:1.6.2")
 
     //logging
     implementation("org.slf4j:slf4j-simple:2.0.7")
@@ -32,6 +35,8 @@ dependencies {
     //H2 database
     implementation 'com.h2database:h2:2.2.220'
 
+
+    // Exposed (database stuff)
     implementation("org.jetbrains.exposed:exposed-core:$EXPOSED_VERSION")
     implementation("org.jetbrains.exposed:exposed-dao:$EXPOSED_VERSION")
     implementation("org.jetbrains.exposed:exposed-jdbc:$EXPOSED_VERSION")
