--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\joozdlogCommon\\build\\libs\\joozdlogCommon.jar")
     implementation files("C:\\Users\\joozd\\IdeaProjects\\libs\\joozdserializing-jvm-0.1.1.jar")
     implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\JoozdlogImport\\build\\libs\\JoozdlogImport.jar")
+    implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\PdfLogbookBuilder\\build\\libs\\PdfLogbookBuilder.jar")
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
@@ -40,6 +41,9 @@ dependencies {
     implementation("org.jetbrains.exposed:exposed-core:$EXPOSED_VERSION")
     implementation("org.jetbrains.exposed:exposed-dao:$EXPOSED_VERSION")
     implementation("org.jetbrains.exposed:exposed-jdbc:$EXPOSED_VERSION")
+
+    //iTextPDF
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
 }
 
 test {
