--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation files("C:\\Users\\joozd\\IdeaProjects\\libs\\joozdserializing-jvm-0.1.1.jar")
     implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\JoozdlogImport\\build\\libs\\JoozdlogImport.jar")
     implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\PdfLogbookBuilder\\build\\libs\\PdfLogbookBuilder.jar")
+    implementation files("C:\\Users\\joozd\\StudioProjects\\LogbookApp\\JoozdlogImport\\build\\libs\\JoozdlogImport.jar")
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
@@ -31,7 +32,8 @@ dependencies {
     implementation("org.slf4j:slf4j-simple:2.0.7")
 
     // JSON
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.0")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.15.0")         // JSON
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.12.3")    // CSV
 
     //H2 database
     implementation 'com.h2database:h2:2.2.220'
@@ -44,6 +46,11 @@ dependencies {
 
     //iTextPDF
     implementation 'com.itextpdf:itextpdf:5.5.13.3'
+
+    // apache batik for signature to image
+    implementation 'org.apache.xmlgraphics:batik-transcoder:1.17'
+    implementation 'org.apache.xmlgraphics:batik-codec:1.17'
+
 }
 
 test {
