--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     //logging
     implementation("org.slf4j:slf4j-simple:2.0.7")
+    implementation("ch.qos.logback:logback-classic:1.4.11")
 
     // JSON
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.15.0")         // JSON
